# puml

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  cat.md  lefthook.yml  mise.toml
.claude/: settings.json
.config/: nextest.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  parity-reports.yml  q-a.yml  show-and-tell.yml  swarm-lab.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: auto-release-from-main.yml  codeql.yml  differential-oracle-smoke.yml  main-gate.yml  oracle.yml  pages.yml  pr-gate.yml  project-sync.yml  release-please.yml  release.yml
agent-pack/: .lsp.json  .mcp.json  README.md
agent-pack/.claude-plugin/: marketplace.json  plugin.json
agent-pack/.codex-plugin/: marketplace.json  plugin.json
agent-pack/agents/: puml-diagram-designer.md  puml-diagram-reviewer.md
agent-pack/tests/: mcp_smoke.sh
crates/puml-wasm/: Cargo.toml
docs/: architecture.md  autonomous-workflow-cookbook.md  branch-protection.md  ci-integration.md  cli.md  codex-workflow.md  comparison.md  contributing.md  coverage-status.md  decision-log.md  discussions.md  faq.md  fixture-snapshot-workflow.md  install.md  oracle-thresholds.md  parity-research-chunk-g-sequence.md  parity-research-mermaid.md  parity-research-plantuml.md  parity-roadmap.md  plantuml_frontend_conformance_matrix.md  project-board-sync.md  quickstart.md  release-checklist.md  release-contract-audit.md  troubleshooting.md  url-includes.md
docs/audits/: deep_audit_architecture.md  deep_audit_performance.md  parity_gap_core.csv  parity_gap_nonuml.csv  plantuml_parity_source_of_truth.md  plantuml_surface_core.md  plantuml_surface_nonuml.md  post_blitz_gap_table.md  visual_audit_2026-05-17_redo.md
docs/benchmarks/: .latest.previous.json  HISTORY.md  README.md  baseline_full.json  baseline_quick.json  latest.csv  latest.json  latest.md  latest_trend.json  latest_trend.md  oracle_evidence_refresh.md  oracle_report.json  oracle_smoke_latest.json  parity_latest.json  render_check_latest.json
docs/diagrams/: architecture-overview.puml  diagram-family-lifecycle.puml  issue-987-state-notes.puml  language-service-layers.puml  parity-status.puml  pipeline-sequence.puml
docs/examples/: GALLERY.md  KNOWN_LIMITATIONS.md  README.md  basic_hello.puml  groups_notes.puml  lifecycle_autonumber.puml  nonuml_parity_gantt_chart_topology.puml  supported_primitives.md  supported_primitives_lifecycle_structure.puml  supported_primitives_participants_messages.puml  supported_primitives_styling_groups_notes.puml
docs/internal/: README.md  architecture-decisions.md  branch-protection.md  coverage-status.md  oracle-thresholds.md  project-board-sync.md  release-contract-audit.md  visual-audit-2026-05-18.md  visual-audit-pipeline.md
docs/specs/: diagram_families_architecture_spec.md  picouml-language.md  puml_agent_plugin_mcp_spec.md  puml_lsp_spec.md  puml_markdown_fence_renderer_spec(1).md  puml_studio_spa_spec.md  puml_syntax_highlighting_spec(1).md  puml_vscode_extension_spec(1).md
extensions/vscode/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
scripts/: autonomy-check.sh  bench.sh  bench_gate.py  branch-protection.sh  build-site.mjs  check-all.sh  check_renderer_boundaries.py  check_rust_file_sizes.py  ci-classify-changes.py  coverage-changed.sh  dev.sh  differential_oracle_smoke.py  ecosystem-rollout-check.sh  harness-check.sh  import_bootstrap_icons.py  import_material_icons.py  import_openiconic.py  install-hooks.sh  install.sh  lefthook-pre-push.sh  local-gate.sh  mirror-specs.mjs  oracle.sh  oracle_promoted_gate.py  oracle_report_summary.py  parity_harness.py  plantuml_feature_manifest.py  project-board-hygiene.py  project-board-sync.sh  project-v2-event-sync.sh  regen-artifacts.sh  render_check.py  render_corpus.py  setup.sh  site-smoke.sh  svg_bounds_audit.py  validate_agent_pack.py  visual_audit_batch.py  vscode-smoke.sh  wasm-smoke.mjs
site/: .gitignore  README.md  config.toml
site/content/: _index.md  editor.md  gallery.md
site/sass/: style.scss
site/scripts/: smoke-inline-fence-preview.mjs
site/templates/: base.html  (+5 more)
src/: ast.rs  bootstrap_icons.rs  chart_subtype_registry.rs  cli.rs  cli_about.rs  cli_count.rs  cli_diagnostics.rs  cli_diff.rs  cli_dump.rs  cli_dump_ast.rs  cli_env.rs  cli_format.rs  cli_hash.rs  cli_input.rs  cli_lint.rs  cli_output.rs  cli_run.rs  cli_stats.rs  cli_stats_format.rs  cli_watch.rs  creole.rs  diagnostic.rs  diagram_family_registry.rs  formatter.rs  language_service.rs  layout.rs  lib.rs  main.rs  material_icons.rs  metadata.rs  model.rs  normalize.rs  openiconic.rs  output.rs  parser.rs  preproc.rs  raster.rs  registry.rs  render.rs  render_core.rs  (+8 more)
stdlib/: README.md
tests/: abstract_class_italic_767.rs  activity_ch06_parity.rs  activity_issue_587.rs  activity_w10_parity.rs  activity_w8_parity.rs  all_examples_render.rs  api_compile_contract_400.rs  architecture_overview_label_regression.rs  arrowhead_correctness_1491_1492.rs  audit_fixes_w14_activity_layout.rs  audit_fixes_w14_group_a.rs  audit_fixes_w14_state_sequence.rs  azure_gcp_stdlib_arg_order_1493.rs  bench_gate_audit.rs  board_files_family.rs  branch_protection_contract_audit.rs  c4_description_tech_w15.rs  ch01_sequence_parity.rs  ch02_usecase_parity.rs  ch03_class_parity.rs  ch04_object_parity.rs  ch07_component_parity.rs  ch13_nwdiag_parity.rs  ch14_salt_parity.rs  ch17_mindmap_parity.rs  ch18_wbs_parity.rs  ch21_common_parity.rs  chart_mindmap_wbs_visual_depth.rs  chart_parity.rs  chen_ie_linetype_ortho_1392.rs  chen_layout_regression.rs  chen_w12_parity.rs  ci_classify_changes_contract.rs  class_density_retune_1427.rs  class_generics_edge_1383.rs  class_label_arch_overview_1382_1385.rs  class_spot_stereotype_1398.rs  class_visibility_badge_w15.rs  class_w10_arrowheads_parity.rs  cli_about_subcommand.rs  (+160 more)
(+1745 files in other folders)
