[workspace]
members = ["crates/puml-wasm"]

[profile.release]
# Default profile shared by the workspace; the wasm crate wants tight
# binaries (opt-level = "z" + lto) but the puml CLI release profile is
# unchanged for everyday development.
opt-level = 3
lto = false

[package]
name = "puml"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Fast, no-Java PlantUML-compatible diagram rendering as a Rust CLI and library."
license = "MIT"
repository = "https://github.com/alliecatowo/puml"
homepage = "https://alliecatowo.github.io/puml/"
documentation = "https://alliecatowo.github.io/puml/guide/cli/"
readme = "README.md"
keywords = ["plantuml", "diagram", "svg", "cli", "renderer"]
categories = ["command-line-utilities", "parser-implementations", "rendering", "visualization"]
default-run = "puml"
# Package allowlist: files not listed here are excluded from crates.io.
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/docs/examples/**",
    "/src/**",
    "/stdlib/**",
]

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:glob",
    "dep:resvg",
    "dep:tiny-skia",
    "dep:image",
    "url-includes",
]
url-includes = ["dep:ureq", "dep:sha2", "dep:hex"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml-rust2 = { version = "0.11", default-features = false }
winnow = "0.7"
clap = { version = "4.5", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }
resvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1.43", features = ["json"] }
predicates = "3"
tempfile = "3"
httpmock = "0.7"
roxmltree = "0.20"
# PNG baseline diffing for visual_regression tests.  These are the same
# versions already locked as optional `cli`-feature dependencies, so no
# new crates are fetched — we just make them available to the test harness
# without requiring the `cli` feature flag at build time.
resvg = "0.45"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name = "puml"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "puml-lsp"
path = "src/bin/puml-lsp.rs"
