[workspace]
members = ["crates/puml-wasm"]

[profile.release]
# Default profile shared by the workspace; the wasm crate wants tight
# binaries (opt-level = "z" + lto) but the puml CLI release profile is
# otherwise tuned for runtime speed. Strip symbols so benchmark and main-gate
# binary-size checks measure the shipped CLI artifact instead of debug metadata.
#
# panic = "abort" drops unwind tables (saves ~1-3 MB binary size) and lets the
# linker eliminate panic-cleanup paths that the CLI never relies on — the
# binary aborts on panic instead of unwinding. Cargo test still uses the dev
# profile (unwind), so #[should_panic] tests are unaffected.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-ci]
# Fast CI binary profile: same correctness as release but no LTO and parallel
# codegen.  Used by artifact_regen and binary-size jobs where we need a working
# binary but do NOT need peak throughput or the smallest possible binary.
# Compared with [profile.release]:
#   opt-level=1   → ~2× faster compile, ~5-10% slower runtime (irrelevant in CI)
#   lto=false     → skips thin-LTO link phase (~40-60s savings per binary build)
#   codegen-units=16 → maximises parallel LLVM codegen (~20-30s savings)
# Inherits panic="abort" and strip="symbols" from release for comparable size.
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16

[package]
name = "puml"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Fast, no-Java PlantUML-compatible diagram rendering as a Rust CLI and library."
license = "MIT"
repository = "https://github.com/alliecatowo/puml"
homepage = "https://alliecatowo.github.io/puml/"
documentation = "https://alliecatowo.github.io/puml/guide/cli/"
readme = "README.md"
keywords = ["plantuml", "diagram", "svg", "cli", "renderer"]
categories = ["command-line-utilities", "parser-implementations", "rendering", "visualization"]
default-run = "puml"
# Package allowlist: files not listed here are excluded from crates.io.
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/THIRD_PARTY_NOTICES.md",
    "/docs/examples/**",
    "/src/**",
    "/stdlib/**",
]

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:glob",
    "dep:regex",
    "dep:resvg",
    "dep:tiny-skia",
    "dep:image",
    "dep:svg2pdf",
    "url-includes",
]
url-includes = ["dep:ureq", "dep:sha2", "dep:hex"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
yaml-rust2 = { version = "0.11", default-features = false }
winnow = "1.0"
flate2 = "1.1"
clap = { version = "4.5", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }
regex = { version = "1", optional = true }
resvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"], optional = true }
svg2pdf = { version = "0.13", optional = true }
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
sha2 = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1.43", features = ["json"] }
predicates = "3"
tempfile = "3"
httpmock = "0.8"
roxmltree = "0.21"
# PNG baseline diffing for visual_regression tests.  These are the same
# versions already locked as optional `cli`-feature dependencies, so no
# new crates are fetched — we just make them available to the test harness
# without requiring the `cli` feature flag at build time.
resvg = "0.47"
tiny-skia = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[[bin]]
name = "puml"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "puml-lsp"
path = "src/bin/puml-lsp.rs"
